--- a/docker/Dockerfile-cpu
+++ b/docker/Dockerfile-cpu
@@ -10,9 +10,13 @@ ADD https://ultralytics.com/assets/Arial.ttf https://ultralytics.com/assets/Aria
 
 # Install linux packages
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt update
-RUN TZ=Etc/UTC apt install -y tzdata
-RUN apt install --no-install-recommends -y python3-pip git zip curl htop libgl1-mesa-glx libglib2.0-0 libpython3-dev gnupg g++
+# JIMM: removed these since they cause build failures: libgl1-mesa-glx
+# JIMM: added "python3.11-venv ffmpeg libsm6 libxext6"
+RUN apt update && \
+  TZ=Etc/UTC apt install -y tzdata && \
+  apt install --no-install-recommends -y python3-pip git zip curl htop libglib2.0-0 libpython3-dev gnupg g++ \
+    python3.11-venv ffmpeg libsm6 libxext6 && \
+  apt clean
 # RUN alias python=python3
 
 # Create working directory
@@ -24,9 +28,12 @@ WORKDIR /usr/src/ultralytics
 RUN git clone https://github.com/ultralytics/ultralytics /usr/src/ultralytics
 
 # Install pip packages
-RUN python3 -m pip install --upgrade pip wheel
-RUN pip install --no-cache '.[export]' albumentations gsutil notebook \
-        --extra-index-url https://download.pytorch.org/whl/cpu
+# JIMM: BEGIN:
+RUN python3 -m venv ~/envs/yolov8
+# JIMM: END:
+RUN /bin/bash -c "source ~/envs/yolov8/bin/activate && python3 -m pip install --upgrade pip wheel"
+RUN /bin/bash -c "source ~/envs/yolov8/bin/activate && pip install --no-cache '.[export]' albumentations gsutil notebook \
+        --extra-index-url https://download.pytorch.org/whl/cpu"
 
 # Cleanup
 ENV DEBIAN_FRONTEND teletype
