--- a/docker/Dockerfile-cpu
+++ b/docker/Dockerfile-cpu
@@ -25,7 +25,7 @@ WORKDIR /usr/src/ultralytics
 
 # Copy contents
 # COPY . /usr/src/app  (issues as not a .git directory)
-RUN git clone https://github.com/ultralytics/ultralytics /usr/src/ultralytics
+RUN git clone -b main-jimm --single-branch https://github.com/jim-meyer/ultralytics-yolov8.git /usr/src/ultralytics
 
 # Install pip packages
 # JIMM: BEGIN:
